argo-services/immich/immich-ml-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: immich-ml
  name: immich-ml
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-ml
  template:
    metadata:
      labels:
        app: immich-ml
    spec:
      containers:
      - image: immich-ml
        imagePullPolicy: IfNotPresent
        name: immich-ml
        ports:
          - name: http
            containerPort: 3003
            protocol: TCP
        volumeMounts:
          - mountPath: /cache
            name: model-cache
        livenessProbe:
          httpGet:
            path: /ping
            port: http
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ping
            port: http
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /ping
            port: http
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 60
        securityContext:
          capabilities:
            drop:
              - ALL
          privileged: false
          runAsNonRoot: true
          allowPrivilegeEscalation: false
      volumes:
        - name: model-cache
          persistentVolumeClaim:
            claimName: immich-model-cache
      securityContext:
        runAsUser: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        fsGroup: 10001
