argo-services/immich/immich-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: immich-server
  name: immich-server
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      containers:
      - image: immich-server
        name: immich-server
        ports:
          - name: http
            containerPort: 2283
            protocol: TCP
        volumeMounts:
          - mountPath: /data
            name: data
        livenessProbe:
          httpGet:
            path: /api/server/ping
            port: http
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /api/server/ping
            port: http
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /api/server/ping
            port: http
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 30
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: immich-library
