argo-services/immich/immich-ml-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-ml
spec:
  ports:
  - port: 3003
    protocol: TCP
  selector:
    app: immich-ml
