argo-services/immich/immich-server-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server
spec:
  ports:
  - port: 2283
    protocol: TCP
  selector:
    app: immich-server
